samples/_failures_safe/1761718590_231ccd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd3e8336.c: In function ‘main’:
./samples/SAFE/__tmp_fd3e8336.c:160:12: error: missing terminating " character
  160 |     printf("Adding nodes 0-9...
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fd3e8336.c:160:5: error: expected expression at end of input
  160 |     printf("Adding nodes 0-9...
      |     ^~~~~~
./samples/SAFE/__tmp_fd3e8336.c:160:5: error: expected declaration or statement at end of input
